[project]
name = "software-engineer"
version = "0.1.0"
description = ""
authors = [
    {name = "TobsBP",email = "tobias.bp2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "software_engineer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
